--- a/Hackathon.csproj
+++ b/Hackathon.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MySql.Data" Version="7.0.7-*"/>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="1.1.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.4"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.2"/>
